--- a/AppGrowing/templates/index.html
+++ b/AppGrowing/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GROWING</title>
-    <link rel="stylesheet" href="css.css"> <!-- Link to the CSS file -->
+    <link rel="stylesheet" href="{% static 'css.css' %}">
 </head>
 <body>
     <div class="container">
@@ -12,7 +12,7 @@
         <div class="wrapper">
             <!-- COMPANY INFORMATION -->
             <div class="company-info">
-                <img src="FAVICON.webp" alt="Growing" class="company-logo">
+                <img src="{% static 'FAVICON.webp' %}" alt="Growing" class="company-logo">
             </div>
             <!-- End .company-info -->
 
