--- a/AppGrowing/templates/index.html
+++ b/AppGrowing/templates/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GROWING</title>
-    <link rel="stylesheet" href="{% static 'css.css' %}">
+    <link rel="stylesheet" href="{% static 'AppListado/css.css' %}">
 </head>
 <body>
     <div class="container">
     	<div>&nbsp;</div>
         <div class="wrapper">
             <div class="company-info">
-                <img src="{% static 'FAVICON.webp' %}" alt="Growing" class="company-logo">
+                <img src="{% static 'AppListado/FAVICON.webp' %}" alt="Growing" class="company-logo">
             </div>
             <div class="contact">
                 <h3>REGISTRATE</h3>
