--- a/AppGrowing/templates/index.html
+++ b/AppGrowing/templates/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GROWING</title>
     <link rel="stylesheet" href="{% static 'AppListado/css.css' %}">
+    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="/AppListado/css.css">
+    <link rel="stylesheet" href="/static/css.css">
 </head>
 <body>
     <div class="container">
