--- a/AppGrowing/templates/index.html
+++ b/AppGrowing/templates/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GROWING</title>
-    <link rel="stylesheet" src="{% static 'AppListado/css.css' %}">
-    <link rel="stylesheet" src="css.css">
-    <link rel="stylesheet" src="/AppListado/css.css">
-    <link rel="stylesheet" src="/static/css.css">
+    <link src="{% static 'AppListado/css.css' %}">
+    <link src="css.css">
+    <link src="/AppListado/css.css">
+    <link src="/static/css.css">
 </head>
 <body>
     <div class="container">
