--- a/AppGrowing/templates/index.html
+++ b/AppGrowing/templates/index.html
@@ -1,21 +1,17 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GROWING</title>
-    <link src="{% static 'AppListado/css.css' %}">
     <link src="css.css">
-    <link src="/AppListado/css.css">
-    <link src="/static/css.css">
 </head>
 <body>
     <div class="container">
     	<div>&nbsp;</div>
         <div class="wrapper">
             <div class="company-info">
-                <img src="{% static 'AppListado/FAVICON.webp' %}" alt="Growing" class="company-logo">
+                <img src="FAVICON.webp" alt="Growing" class="company-logo">
             </div>
             <div class="contact">
                 <h3>REGISTRATE</h3>
