--- a/AppGrowing/templates/index.html
+++ b/AppGrowing/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GROWING</title>
-    <link src="css.css">
+    <link rel="stylesheet" src="css.css">
 </head>
 <body>
     <div class="container">
