--- a/AppGrowing/templates/index.html
+++ b/AppGrowing/templates/index.html
@@ -1,17 +1,18 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GROWING</title>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="{% static 'AppGrowing/css.css' %}">
 </head>
 <body>
     <div class="container">
     	<div>&nbsp;</div>
         <div class="wrapper">
             <div class="company-info">
-                <img src="FAVICON.webp" alt="Growing" class="company-logo">
+                <img src="{% static 'AppGrowing/FAVICON.webp' %}" alt="Growing" class="company-logo">
             </div>
             <div class="contact">
                 <h3>REGISTRATE</h3>
