--- a/AppGrowing/templates/home.html
+++ b/AppGrowing/templates/home.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    <h1>Welcome to Growing</h1>
-    <p>This is the home page.</p>
-    <a href="{% url 'contact' %}">Contact Us</a>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
+<h1>Welcome to Growing</h1>
+<p>This is the home page.</p>
+<a href="{% url 'contact' %}" class="btn btn-primary">Contact Us</a>
+{% endblock %}
